src/objects/Workplace__c.object
<CustomObject>
    <description>This custom object is used for the Unilever Workplace Mobile app on Salesforce1.</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Floor_Plan__c</fullName>
        <description>Upload the floor plan info (tabular format) as an image in the rich text and display the rich text field value on UI directly.</description>
        <label>Floor Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Gym__c</fullName>
        <description>Enter the text (gym intro etc.) and schedule (tabular format as an image) in this field. Display the rich text field value directly on the UI.</description>
        <label>Gym</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HealthandSafety__c</fullName>
        <description>Contains the Health &amp; Safety info for the workplace. Directly show the rich text field value on UI.</description>
        <label>Health and Safety</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Key_Contacts__c</fullName>
        <description>Upload the key contact info (tabular format) as an image in the rich text and display the rich text field value on UI directly.</description>
        <label>Key Contacts</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Shop__c</fullName>
        <description>Contains the Unilever Shop details for the workplace.</description>
        <label>Shop</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sustainability_Month1_Label__c</fullName>
        <description>Label for Month 1. Ex: Sep</description>
        <label>Sustainability Month1 Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sustainability_Month1_Value__c</fullName>
        <description>Sustainability Value for Month 1</description>
        <label>Sustainability Month1 Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sustainability_Month2_Label__c</fullName>
        <description>Label for Month 2. Ex: Aug</description>
        <label>Sustainability Month2 Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sustainability_Month2_Value__c</fullName>
        <description>Sustainability Value for Month 2</description>
        <label>Sustainability Month2 Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sustainability_Month3_Label__c</fullName>
        <description>Label for Month 3. Ex: Jul</description>
        <label>Sustainability Month3 Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sustainability_Month3_Value__c</fullName>
        <description>Sustainability Value for Month 3</description>
        <label>Sustainability Month3 Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sustainability_Target_Value__c</fullName>
        <description>Sustainability Target Value for the Year</description>
        <label>Sustainability Target Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sustainability_Target_Year_Label__c</fullName>
        <description>Label for Target Year. Ex: 2015</description>
        <label>Sustainability Target Year Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transport__c</fullName>
        <description>Travel info for the workplace site</description>
        <label>Transport</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Workplace_Group__c</fullName>
        <description>Contains the SF Id of the Workplace Chatter Group</description>
        <label>Workplace Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workplace_Image__c</fullName>
        <description>Image for the Workplace site</description>
        <label>Workplace Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Workplace_Local_Groups__c</fullName>
        <description>Contains the SF Id&apos;s of the local groups (comma separated) related to the workplace.</description>
        <label>Workplace Local Groups</label>
        <type>TextArea</type>
    </fields>
    <label>Workplace</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Workplace</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workplace</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>